project create added

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PROTOCOL="http://"
 HOSTNAME="localhost"
 PORT=8080
 PUT_SIGNUP_URL="$PROTOCOL$HOSTNAME:$PORT/auth/signup"
+API=http://localhost:8080/
