--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
