--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "bootstrap": "^5.1.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "socket.io-client": "^4.4.0",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.30",
