--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PROTOCOL="http://"
 HOSTNAME="localhost"
 PORT=8080
-PUT_SIGNUP_URL="$PROTOCOL$HOSTNAME:$PORT/auth/signup"
-API="http://localhost/8080"
+
+# backend
+API='https://server-synergy.herokuapp.com'
