--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "synergy-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.1",
-    "@mui/material": "^5.2.3",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "socket.io-client": "^4.4.0",
-    "timeago.js": "^4.0.2"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.30",
-    "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.4"
-  }
+	"name": "synergy-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"engines": {
+		"node": "^14.0.0"
+	},
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.7.0",
+		"@emotion/styled": "^11.6.0",
+		"@mui/icons-material": "^5.2.1",
+		"@mui/material": "^5.2.3",
+		"axios": "^0.24.0",
+		"bootstrap": "^5.1.3",
+		"next": "11.1.2",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"socket.io-client": "^4.4.0",
+		"timeago.js": "^4.0.2"
+	},
+	"devDependencies": {
+		"@types/react": "17.0.30",
+		"eslint": "8.0.1",
+		"eslint-config-next": "11.1.2",
+		"typescript": "4.4.4"
+	}
 }
